--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "repository": "git@github.com:friedger/stacks-webflow.git",
   "author": "Friedger Müffke <mail@friedger.de>",
-  "license": "GPL3",
+  "license": "GPL-3.0-or-later",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development --progress --port 3000"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development --progress --port 3000",
+    "build": "webpack"
   },
   "dependencies": {
     "@stacks/connect": "^6.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
